The CXXFLAGS variable is a user variable. One should use AM_CXXFLAGS instead. (to do in other makefile.am)

--- a/eugene/src/SensorPlugins/StartWAM/Makefile.am
+++ b/eugene/src/SensorPlugins/StartWAM/Makefile.am
@@ -17,7 +17,7 @@
 # Contents: compilation of the StartWAM directory
 # ------------------------------------------------------------------
 
-CXXFLAGS = $(eugene_CXXFLAGS)
+AM_CXXFLAGS = $(eugene_CXXFLAGS)
 
 
 bin_PROGRAMS = Sensor.StartWAM.so
