--- a/eugene/src/SensorPlugins/Riken/Makefile.am
+++ b/eugene/src/SensorPlugins/Riken/Makefile.am
@@ -17,7 +17,7 @@
 # Contents: compilation of the Riken directory
 # ------------------------------------------------------------------
 
-CXXFLAGS = $(eugene_CXXFLAGS)
+AM_CXXFLAGS = $(eugene_CXXFLAGS)
 
 
 bin_PROGRAMS = Sensor.Riken.so
