A modified Makefile.am that should compile under macosX too....

--- a/eugene/src/SensorPlugins/Makefile.am
+++ b/eugene/src/SensorPlugins/Makefile.am
@@ -18,7 +18,7 @@
 # ------------------------------------------------------------------
 
 
-export eugene_LDFLAGS = -shared -mimpure-text
+export eugene_LDFLAGS = $(sensors_ldflags)
 
 SUBDIRS = 0_SensorTk AnnotaStruct ATGpr BlastX Est EuStop FrameShift GCPlot GFF GSplicer Homology IfElse MarkovConst MarkovIMM MarkovProt NG2 NStart PatConst PepSignal Plotter Repeat Riken SMachine SPred SpliceWAM StartWAM Tester Transcript User
 
