--- a/eugene/Makefile.am
+++ b/eugene/Makefile.am
@@ -28,7 +28,7 @@ export eugene_CXXFLAGS =
 endif
 
 if MACOS_OS
-export sensors_ldflags = -bundle -flat_namespace -undefined suppres
+export sensors_ldflags = -bundle -flat_namespace -undefined suppress
 export eugene_CXXFLAGS = 
 endif
 
