--- a/eugene/src/SensorPlugins/GFF/Makefile.am
+++ b/eugene/src/SensorPlugins/GFF/Makefile.am
@@ -17,12 +17,13 @@
 # Contents: compilation of the GFF directory
 # ------------------------------------------------------------------
 
-CXXFLAGS = $(eugene_CXXFLAGS)
+AM_CXXFLAGS = $(eugene_cxxflags)
+AM_CFLAGS = 
 
 
-bin_PROGRAMS = Sensor.GFF.so
+noinst_PROGRAMS = Sensor.GFF.so
 Sensor_GFF_so_SOURCES = Sensor.GFF.cc Sensor.GFF.h 
-Sensor_GFF_so_LDFLAGS = $(eugene_LDFLAGS)
+Sensor_GFF_so_LDFLAGS = $(sensors_ldflags)
 
 
 CLEANFILES = *~
