The default eugene directory root is set to the compilation variable pkgdatadir (egal to ${prefix}/<data dir>/<package name>. Note that the value is /usr/share/eugene when building a Debian package, /usr/local/share/eugene when locally compiling without explicit definition of the prefix variable (defined calling configure with --prefix argument)

--- a/eugene/src/Makefile.am
+++ b/eugene/src/Makefile.am
@@ -20,7 +20,7 @@
 
 SUBDIRS = Parametrization GDIF . SensorPlugins
 
-AM_CXXFLAGS = $(eugene_cxxflags)
+AM_CXXFLAGS = $(eugene_cxxflags) -DDEFAULT_EUGENE_DIR=\"${pkgdatadir}\"
 AM_CFLAGS = 
 
 bin_PROGRAMS = eugene
