A typo on MacOSX

--- a/eugene/Makefile.am
+++ b/eugene/Makefile.am
@@ -30,7 +30,7 @@ export eugene_cxxflags =
 endif
 
 if MACOS_OS
-export sensors_ldflags = -bundle -flat_namespace -undefined suppres
+export sensors_ldflags = -bundle -flat_namespace -undefined suppress
 export eugene_cxxflags = 
 endif
 
