Une version qui compile sous AMD64 (-fPIC nécessaire)

--- a/eugene/src/SensorPlugins/User/Makefile.am
+++ b/eugene/src/SensorPlugins/User/Makefile.am
@@ -18,7 +18,7 @@
 # ------------------------------------------------------------------
 
 AM_CXXFLAGS = $(eugene_cxxflags)
-AM_CFLAGS = 
+AM_CFLAGS = $(eugene_cflags)
 CC = $(CXX)
 AM_YFLAGS = -d
 
