--- a/eugene/Makefile.am
+++ b/eugene/Makefile.am
@@ -19,17 +19,20 @@
 
 
 
-export sensors_ldflags = -shared
-export eugene_cxxflags = -rdynamic
+export sensors_ldflags = -shared 
+export eugene_cxxflags = -rdynamic -fPIC
+export eugene_cflags = -fPIC
 
 if SOLARIS_OS
 export sensors_ldflags = -shared -mimpure-text
 export eugene_cxxflags = 
+export eugene_cflags = 
 endif
 
 if MACOS_OS
-export sensors_ldflags = -bundle -flat_namespace -undefined suppress
+export sensors_ldflags = -bundle -flat_namespace -undefined suppres
 export eugene_cxxflags = 
+export eugene_cflags = 
 endif
 
 
