Change target 'clean' in 'cleandoc' to avoid to delete the documentation file provided with the tar.gz file with no possibility to rebuild it.

--- a/eugene/doc/Makefile.am
+++ b/eugene/doc/Makefile.am
@@ -5,6 +5,6 @@ EuGeneDoc.pdf : GenerateDoc.tcl Doc.tex ParaOptimization.fig ParaOptimization.pd
 	tclsh GenerateDoc.tcl
 
 
-clean :
+cleandoc :
 	rm -f CmdFlags.* EuGeneDoc.* *~
 
