Add classes for GFF3

--- a/eugene/src/Makefile.am
+++ b/eugene/src/Makefile.am
@@ -25,9 +25,14 @@ AM_CFLAGS =
 
 bin_PROGRAMS = eugene
 
-eugene_SOURCES = EuGene.cc DAG.cc DAG.h Hits.cc Hits.h DNASeq.cc DNASeq.h  System.cc System.h Prediction.cc Prediction.h  BackP.cc BackP.h Sensor.cc Sensor.h Dll.cc Dll.h MSensor.cc MSensor.h Param.cc Param.h PenaltyDist.cc PenaltyDist.h SensorIF.h Const.h AltEst.cc AltEst.h Gff3Line.cc Gff3Line.h
+eugene_SOURCES = EuGene.cc DAG.cc DAG.h Hits.cc Hits.h DNASeq.cc DNASeq.h \
+	System.cc System.h Prediction.cc Prediction.h BackP.cc BackP.h Sensor.cc Sensor.h \
+	Dll.cc Dll.h MSensor.cc MSensor.h Param.cc Param.h PenaltyDist.cc \
+	PenaltyDist.h SensorIF.h Const.h AltEst.cc AltEst.h Gff3Line.cc Gff3Line.h \
+	Attributes.cc Attributes.h Gap.cc Gap.h GeneFeature.cc GeneFeature.h \
+	GeneFeatureSet.cc GeneFeatureSet.h getopt.h Locus.cc Locus.h Prediction_cte.h Sensor.o \
+	SoTerms.cc SoTerms.h Target.cc Target.h
 
 eugene_LDADD = Parametrization/libParametrization.a  GDIF/libGDIF.a -ldl
-
 
 CLEANFILES = *~
