Add commented parameters for gff3 read. New parameters needed by plugin in gff3 mode : Gff3.SoTerms		cfg/sofa.obo Update the way to get sofa.obo file in pluggins when it read gff3 file , parameter Gff3.SoTerms must be specified (before Segmentation fault). This file is installed (Makefile.am)

--- a/eugene/Makefile.am
+++ b/eugene/Makefile.am
@@ -62,6 +62,7 @@ EXTRA_DIST = reconf configure $(srcdir)/config/config.* \
 	     $(srcdir)/doc/ParaOptimization.fig \
 	     $(srcdir)/src/getopt.h \
 	     $(srcdir)/cfg/eugene.par \
+	     $(srcdir)/cfg/sofa.obo \
 	     $(srcdir)/models/*.dist \
 	     $(srcdir)/models/*.mat \
 	     $(srcdir)/models/*.bin \
@@ -103,6 +104,7 @@ install-data-hook:
 	$(INSTALL) -m 644 $(srcdir)/web/Style/eugene.css $(DESTDIR)/$(pkgdatadir)/web/Style
 	$(INSTALL) -m 644 $(srcdir)/web/Javascripts/diap.js $(DESTDIR)/$(pkgdatadir)/web/Javascripts
 	$(INSTALL) -m 644 $(srcdir)/web/Images/*jpg $(DESTDIR)/$(pkgdatadir)/web/Images
+	$(INSTALL) -m 644 $(srcdir)/cfg/*.obo $(DESTDIR)/$(pkgdatadir)/cfg
 	$(INSTALL) -m 644 $(srcdir)/cfg/*.par $(DESTDIR)/$(pkgdatadir)/cfg
 	$(INSTALL) src/SensorPlugins/*/*.so  $(DESTDIR)/$(pkgdatadir)/plugins
 	$(INSTALL) $(srcdir)/Procedures/Eval/egn_* $(DESTDIR)/$(pkgdatadir)/Procedures/Eval
